--- a/setting.html
+++ b/setting.html
@@ -21,13 +21,46 @@
             <span>110%</span>
             <!-- battery Icon-->
             <!-- Lightning Icon -->
-            <i class="fa-solid fa-battery-full fa-2x"></i>
+            <i class="fa-solid fa-battery-full fa-xl"></i>
             <i class="fa-solid fa-bolt-lightning"></i>
         </div>
     </div>
 
+    <header class="alt-header">
+        <div class="alt-header__column"><i class="fa-solid fa-angle-left fa-lg"></i></div>
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column"><i class="fa-solid fa-magnifying-glass fa-lg"></i></div>
+    </header>
+
 
     <main class="main-screen">
+        <ul class="setting-list">
+            <li class="setting__setting">
+                <div class="setting__setting-column">
+                    <i class="fa-solid fa-bullhorn"></i>
+                    <span>Notices</span>
+                </div>
+                <div class="setting__setting-column"></div>
+            </li>
+            <li class="setting__setting">
+                <div class="setting__setting-column">
+                    <a href="more.html">
+                        <i class="fa-solid fa-flask"></i>
+                    </a>
+                    <span>Kakao Lab</span>
+                </div>
+                <div class="setting__setting-column"></div>
+            </li>
+            <li class="setting__setting">
+                <div class="setting__setting-column">
+                    <i class="fa-solid fa-circle-info"></i>
+                    <span>Version</span>
+                </div>
+                <div class="setting__setting-column">Lastest Version</div>
+            </li>
+        </ul>
 
     </main>
 
