--- a/friends.html
+++ b/friends.html
@@ -21,7 +21,7 @@
       <span>110%</span>
       <!-- battery Icon-->
       <!-- Lightning Icon -->
-      <i class="fa-solid fa-battery-full fa-2x"></i>
+      <i class="fa-solid fa-battery-full fa-xl"></i>
       <i class="fa-solid fa-bolt-lightning"></i>
     </div>
   </div>
