--- a/setting.html
+++ b/setting.html
@@ -84,7 +84,12 @@
             </li>
         </ul>
     </nav>
-
+    <div id="no-mobile">
+        <span>Mobile Only</span>
+    </div>
+    <div id="no-landscape">
+        <span>Portrait Only</span>
+    </div>
     <script src="https://kit.fontawesome.com/bff523ec0f.js" crossorigin="anonymous"></script>
 </body>
 
