--- a/chats.html
+++ b/chats.html
@@ -64,7 +64,7 @@
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="fa-solid fa-comment fa-2x"></i></i>
+                    <i class="fa-solid fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
@@ -76,7 +76,12 @@
             </li>
         </ul>
     </nav>
-
+    <div id="no-mobile">
+        <span>Mobile Only</span>
+    </div>
+    <div id="no-landscape">
+        <span>Portrait Only</span>
+    </div>
     <script src="https://kit.fontawesome.com/bff523ec0f.js" crossorigin="anonymous"></script>
 </body>
 
