--- a/friends.html
+++ b/friends.html
@@ -96,7 +96,15 @@
       </li>
     </ul>
   </nav>
-
+  <div id="splash-screen">
+    <i class="fa-solid fa-comment"></i>
+  </div>
+  <div id="no-mobile">
+    <span>Mobile Only</span>
+  </div>
+  <div id="no-landscape">
+    <span>Portrait Only</span>
+  </div>
   <script src="https://kit.fontawesome.com/bff523ec0f.js" crossorigin="anonymous"></script>
 </body>
 
