--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
         <input type="submit" value="Log in" />
         <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+        <span>Mobile Only</span>
+    </div>
+    <div id="no-landscape">
+        <span>Portrait Only</span>
+    </div>
     <script src="https://kit.fontawesome.com/bff523ec0f.js" crossorigin="anonymous"></script>
 </body>
 
