--- a/setting.html
+++ b/setting.html
@@ -85,7 +85,7 @@
         </ul>
     </nav>
     <div id="no-mobile">
-        <span>Mobile just</span>
+        <span>Mobile Only</span>
     </div>
     <div id="no-landscape">
         <span>Portrait Only</span>
