--- a/friends.html
+++ b/friends.html
@@ -100,7 +100,7 @@
     <i class="fa-solid fa-comment"></i>
   </div>
   <div id="no-mobile">
-    <span>Mobile Only</span>
+    <span>Mobile Only *branch test*</span>
   </div>
   <div id="no-landscape">
     <span>Portrait Only</span>
